--- a/tpms-ios/Base.lproj/Main.storyboard
+++ b/tpms-ios/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oO0-HB-L3V">
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="BER-kL-aKi"/>
-                                            <constraint firstAttribute="width" constant="60" id="v5q-Pe-vMS"/>
+                                            <constraint firstAttribute="width" constant="80" id="v5q-Pe-vMS"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <state key="normal" title="蓝牙" image="ic_bluetooth.png"/>
@@ -56,7 +56,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zqe-pw-xrm">
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="SbP-Kq-7oL"/>
-                                            <constraint firstAttribute="width" constant="60" id="orp-vb-cMf"/>
+                                            <constraint firstAttribute="width" constant="80" id="orp-vb-cMf"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <state key="normal" title="设置" image="ic_setting.png"/>
@@ -65,11 +65,11 @@
                                 <constraints>
                                     <constraint firstItem="Zqe-pw-xrm" firstAttribute="centerY" secondItem="OVk-kM-1DW" secondAttribute="centerY" id="1js-2W-0KA"/>
                                     <constraint firstItem="gjU-Fd-LCl" firstAttribute="centerY" secondItem="oO0-HB-L3V" secondAttribute="centerY" id="RIS-2n-LBE"/>
-                                    <constraint firstAttribute="trailing" secondItem="Zqe-pw-xrm" secondAttribute="trailing" constant="8" id="ays-zl-Ij4"/>
+                                    <constraint firstAttribute="trailing" secondItem="Zqe-pw-xrm" secondAttribute="trailing" id="ays-zl-Ij4"/>
                                     <constraint firstItem="oO0-HB-L3V" firstAttribute="centerY" secondItem="OVk-kM-1DW" secondAttribute="centerY" id="dej-i4-03M"/>
                                     <constraint firstAttribute="height" constant="60" id="m9s-jn-mE3"/>
                                     <constraint firstItem="gjU-Fd-LCl" firstAttribute="centerX" secondItem="oO0-HB-L3V" secondAttribute="centerX" id="mrK-j4-Mdv"/>
-                                    <constraint firstItem="oO0-HB-L3V" firstAttribute="leading" secondItem="OVk-kM-1DW" secondAttribute="leading" constant="8" id="o50-9W-EMK"/>
+                                    <constraint firstItem="oO0-HB-L3V" firstAttribute="leading" secondItem="OVk-kM-1DW" secondAttribute="leading" id="o50-9W-EMK"/>
                                     <constraint firstItem="pJn-4h-wgX" firstAttribute="centerX" secondItem="OVk-kM-1DW" secondAttribute="centerX" id="tcp-Xa-uRU"/>
                                     <constraint firstItem="pJn-4h-wgX" firstAttribute="top" secondItem="OVk-kM-1DW" secondAttribute="top" constant="10" id="wV7-xQ-Hhw"/>
                                 </constraints>
@@ -77,10 +77,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mjo-K5-eMq"/>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kpi-Bb-amS" userLabel="BottomBar">
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bottombar.png" translatesAutoresizingMaskIntoConstraints="NO" id="kCe-Ac-4ab">
-                                        <frame key="frameInset" width="375" height="80"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottombar.png" translatesAutoresizingMaskIntoConstraints="NO" id="kCe-Ac-4ab"/>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Gf-uK-uEp">
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="7Gf-uK-uEp" secondAttribute="height" multiplier="5:3" id="9GL-Qg-T9N"/>
@@ -108,10 +105,15 @@
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="CKg-YE-LrR" secondAttribute="bottom" id="0Xg-LJ-glZ"/>
                                     <constraint firstAttribute="bottom" secondItem="7Gf-uK-uEp" secondAttribute="bottom" id="1Bn-D2-N7n"/>
+                                    <constraint firstAttribute="bottom" secondItem="kCe-Ac-4ab" secondAttribute="bottom" id="AsI-5n-TeB"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="FHM-Y0-Ne3"/>
+                                    <constraint firstItem="kCe-Ac-4ab" firstAttribute="leading" secondItem="kpi-Bb-amS" secondAttribute="leading" id="FRX-NO-9es"/>
                                     <constraint firstItem="7Gf-uK-uEp" firstAttribute="leading" secondItem="kpi-Bb-amS" secondAttribute="trailing" multiplier="0.08" id="T7A-Qo-uJV"/>
                                     <constraint firstItem="CKg-YE-LrR" firstAttribute="trailing" secondItem="kpi-Bb-amS" secondAttribute="trailing" multiplier="0.92" id="Vgx-Od-zdW"/>
-                                    <constraint firstAttribute="width" secondItem="kpi-Bb-amS" secondAttribute="height" multiplier="75:16" id="a33-d9-iDf"/>
+                                    <constraint firstAttribute="width" secondItem="kpi-Bb-amS" secondAttribute="height" multiplier="75:16" priority="750" id="a33-d9-iDf"/>
                                     <constraint firstAttribute="bottom" secondItem="k7D-gq-ObB" secondAttribute="bottom" id="aMX-nw-dIO"/>
+                                    <constraint firstAttribute="trailing" secondItem="kCe-Ac-4ab" secondAttribute="trailing" id="pvG-t5-ZEm"/>
+                                    <constraint firstItem="kCe-Ac-4ab" firstAttribute="top" secondItem="kpi-Bb-amS" secondAttribute="top" id="tSW-sn-gZT"/>
                                     <constraint firstItem="k7D-gq-ObB" firstAttribute="centerX" secondItem="kpi-Bb-amS" secondAttribute="centerX" id="tbS-eJ-eth"/>
                                 </constraints>
                             </view>
